# consultation_system

./: .gitignore  ConsultationSystem.uipath.flow.arch.plan.md  README.md  SOLUTION_DESIGN.md  agentic_consultation_management.bpmn
ConsultationSystem/: ConsultationSystem.uipx  df_choice_set_map.json
ConsultationSystem/AgenticConsultationManagement/: AgenticConsultationManagement.flow  bindings_v2.json  operate.json  project.uiproj  simulations.json
ConsultationSystem/AgenticConsultationManagement/3ac7e75f-f015-4fc7-8ecc-64d909b57b5f/: agent.json
ConsultationSystem/AgenticConsultationManagement/9f63ce3e-748f-46b0-8690-0ac95aea4eb8/: agent.json
ConsultationSystem/AgenticConsultationManagement/dff49a67-de87-4564-8767-0baa7fd4aae5/: agent.json
ConsultationSystem/AgenticConsultationManagement/evals/33e382b5-c570-46c0-9d17-5dc28c232557/eval-sets/: evaluation-set.json
ConsultationSystem/SlotAllocator/: allocate_slot.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
ConsultationSystem/resources/solution_folder/package/: AgenticConsultationManagement.json  SlotAllocator.json
clinic-portal/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  uipath.json  vite.config.ts
clinic-portal/src/: App.tsx  index.css  main.tsx
clinic-portal/src/components/: Theme.tsx
clinic-portal/src/hooks/: useAuth.tsx
clinic-portal/src/lib/: constants.ts  df.ts  slots.ts
clinic-portal/src/pages/: BookAppointment.tsx  DoctorEmergency.tsx  ManageAppointments.tsx  RegisterPatient.tsx
(+7 files in other folders)
